Dataset link and requirements for ct scan processing

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Ignore large dataset
+
+Dataset\*.csv
+Dataset\*.zip
+Dataset\*.DICOM
+Dataset\*.tcia
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
