Added a simple cnn feature extractor

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ cptac
 numpy
 scikit-learn
 matplotlib
-fast
-pyradiomics
+#fast
+#pyradiomics
+#pytorch
+#torchvision
+# install from https://pytorch.org/get-started/locally/
