--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,10 @@ Dataset
 *.png
 ./*.pt
 .jessica-ml-project
+CT-Scan/20250423
+CT-Scan/20250411
 
+all_output
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
